--- a/css/stile.css
+++ b/css/stile.css
@@ -3,21 +3,25 @@
     margin: 0;
     box-sizing: border-box;
   }
-  
-   .container {
-    margin:  auto;
+    
+  .container {
+    margin: auto;
     width: 80%;
     height: 100%;
   }
   
+
   
-  /* layout */
+  /* layout immagine */
   .img-prodotto {
-    width: 380.94px;
+    width: 380.94px; 
     margin: 40px 10px 10px 0;
-    position:fixed;
+    float: left;
+    position: relative;
   }
 
+  
+  /* preferiti(Cuore) */
   .preferiti {
     width: 30px;
     height: 30px;
@@ -36,8 +40,9 @@
        color: red;
        cursor: pointer;
    }
-     /* layout */
-    /* sconto */
+  /* /cuore-preferiti */
+  
+  /* sconto */
   .container-sconto {
     background-color: rgb(250, 50, 50);
     display: inline-block;
@@ -57,7 +62,9 @@
   }
   
   /* /sconto */
-   .container-sostenibilità {
+  
+  /* sostenibilità */
+  .container-sostenibilità {
     background-color: green;
     width: 110px;
     height: 30px;
@@ -68,7 +75,7 @@
     line-height: 30px;
     margin-left: 5px;
   }
-    /* sostenibilità */
+  
   .sostenibilità {
     color: white;
     text-align: center;
@@ -79,12 +86,12 @@
     position: absolute;
     bottom: 60px;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     margin-left: 0;
   }
   /* /sostenibilità */
-  
-  /* descrizione prodotto con prezzo */
+
+
   .text-img {
     width: 380.94px;
     height: 50px;
@@ -103,9 +110,7 @@
   .titolo-prodotto {
     font-weight: bold;
   }
-  
 
-  
   /* immagine  */
   .foto-1 {
     height: 550px;
